--- a/dos33.html
+++ b/dos33.html
@@ -6972,16 +6972,18 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3A78:8D FB 04       141             STA $<span class='n'>4FB</span>        ; CLEARS FUNNY 80 COL STUFF     ; <a class='magic' id='_3A79'>magic number</a> TEXT screen hole <span class='todo'>TODO</span>
 3A7B:8D 0C C0       142             STA $<span class='n'>C00C</span>       ; TURNS 80 COL OFF
 3A7E:8D 0E C0       143             STA $<span class='n'>C00E</span>       ; TURN OFF  ALT CHAR SET        ; /sarcasm <i>If only we could define symbols ...</i>
-3A81:4C 2F FB       144             JMP $<span class='n'>FB2F</span>       ; MONITOR INIT ROUTINE          ;          <i>Oh wait!</i> <b>We already have</b> <a class='x' href='#MONINIT'>MONINIT</a> in <a class='file' href='#BOOTLDR'>BOOTLDR</a><span class="patch">
-                        ; === DOS 3.3 D PATCH ===       Called from <a class='x' href='#GOBACK'>GOBACK+5</a> = $<span class='n'>3683</span>
-                        FIXIT3      EQU *
-3A84:AD BD 35                       LDA <a class='d' href='#CCBBYT'>CCBBYT</a>                                      
-3A87:8D E6 35                       STA <a class='d' href='#DCBCSB'>DCBCSB</a>                                      
-3A8A:8D EA 35                       STA <a class='d' href='#DCBCRR'>DCBCRR</a>                                      
-3A8D:BA                             TSX                                             
-3A8E:8E 9B 33                       STX <a class='d' href='#ENTSTK'>ENTSTK</a>                                      
-3A91:4C 7F 33                       JMP <a class='x' href='#GOODIO'>GOODIO</a>                                      
-                        ; === DOS 3.3 D PATCH ===                                   </span>
+3A81:4C 2F FB       <a class='line' name='MSWAITR.144'>144</a>             JMP $<span class='n'>FB2F</span>       ; MONITOR INIT ROUTINE          ;          <i>Oh wait!</i> <b>We already have</b> <a class='x' href='#MONINIT'>MONINIT</a> in <a class='file' href='#BOOTLDR'>BOOTLDR</a><span class="patch">
+                                                                                    ; === DOS 3.3B 1983 ONLY === ; Called from <a class='x' href='#GOBACK'>GOBACK+5</a> = $<span class='n'>3683</span>                                    
+                                                                                    ; <b>Note:</b> "Apple II DOS 3.3 C Source Code Listing" has the old DOS 3.3B TEMPY.pretty on Page 128 
+                                                                                    ; DOS 3.3C shows this got relocated to $36B3 via the hex dump "DOS33C.OBJ" <span class='code'>D/001B80:</span> on Page 36
+                        FIXIT2      EQU *                                                          
+                                    LDA CCBBYT                                      ;3A84:AD BD 35 
+                                    STA DCBCSB                                      ;3A87:8D E6 35 
+                                    STA DCBCRR                                      ;3A8A:8D EA 35 
+                                    TSX                                             ;3A8D:BA       
+                                    STX ENTSTK                                      ;3A8E:8E 9B 33 
+                                    JMP GOODIO                                      ;3A91:4C 7F 33 
+                                                                                    ; === DOS 3.3B 1983 ===</span>
                     145             PAGE
                     146 <a class='f' id='3A94' name='PEC1'        >PEC1        </a>EQU *           ;Tell relocater where to stop   ; See <a class="v" href="#CDETAB">CDETAB</a>, <a class="file" href="#RELOCTR">RELOCTR</a>, Page <a class="page" href="#page115">115</a>
                     147 <a class='e' id='0094' name='PD1'         >PD1         </a>EQU &gt;*
